# Processes-And-Threads

./: .gitignore  README.md
Processes/: example1  example1.c  fork  fork.c  fork1  fork1.c  pipe  pipe.c
Processes/example_pipe/: child  child.c  data.csv  parent  parent.c
Processes/fifo/: reader  reader.c  writer  writer.c
Processes/output/: fork
Processes/output/fork.dSYM/Contents/Resources/DWARF/: fork
Processes/output/fork.dSYM/Contents/Resources/Relocations/aarch64/: fork.yml
Processes/pipe2/: data.txt  pipe  pipe.c
Threads/: barrier  barrier.c  mutex  threading1  threading1.c  threading2  threading2.c
server/: CMakeLists.txt  cal.c  cal.h  main.c  run.sh  server  server.c  server.h  signal.c  signal_handler.c  signal_handler.h  socket.c  socket.h
server/html/: index.html
